--- a/styles/dice.css
+++ b/styles/dice.css
@@ -47,7 +47,7 @@ button:active, button:hover {
     background-color: #4A4458;
 }
 
-section {
+#s1, #s2 {
     width: 50%;
     height: 20vh;
     display: flex;
@@ -73,4 +73,8 @@ section {
 #s3 input:active, #s3 input:hover {
     color: #D0BCFF;
     background-color: #4A4458;
+}
+
+#bt2 {
+    display: none;
 }
